<resources>
    <string name="app_name">Dotify</string>
    <string name="default_username">Nintendo</string>
    <string name="default_play_count">1234</string>
    <string name="song_name">Welcome Horizons</string>
    <string name="artist_name">K.K.</string>
    <string name="change_user">Change User</string>
    <string name="new_user">Enter New Username</string>
    <string name="apply_username">Apply</string>
    <string name="shuffle">Shuffle</string>
    <string name="song_info_format">%s - %s</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="profile_username">Joker</string>
    <string name="profile_user_birthday">Birthday: April 25, 1940</string>
    <string name="profile_user_height">Height: 185 cm</string>
    <string name="profile_user_weight">Weight: 192 lbs</string>
    <string name="about_creator">Created by Leo Kwo</string>
    <string name="about_version_format">Version: %s</string>
    <string name="about_website">Visit my website: leokwo.com</string>
    <string name="stats_song_stats_format">%s by %s has been played %s times.</string>
    <string name="profile_account_error_msg">Error occurred when fetching your Account Information</string>
    <string name="profile_first_name_format">First name: %s</string>
    <string name="profile_last_name_format">Last name: %s</string>
    <string name="profile_nose_false">You do not have a nose. Sorry.</string>
    <string name="profile_nose_true">You have a nose. Awesome!</string>
    <string name="profile_platform_format">You are on platform %s.</string>
    <string name="notification_switch">Notification about new songs</string>
    <string name="new_song_channel">New Song Channel</string>
    <string name="new_song_channel_description">This is the channel for notifications about newly posted songs by artists.</string>
    <string name="new_song_notification_title_format">%s just released a new song!</string>
    <string name="new_song_notification_content_format">Listen to %s now on Dotify</string>
    <string name="back_to_your_collection">Back to Your Collection</string>
</resources>